fixed bad overflow issues

--- a/website/resources/css/menu.css
+++ b/website/resources/css/menu.css
@@ -58,107 +58,84 @@ a {
     margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
-    white-space: nowrap;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    /*white-space: nowrap;*/
+}
+
+.scrollbar-category a{
+    /*overflow: hidden;*/
+    width: 85px;
+    height: 85px;
+    max-width: 85px;
+    max-height: 85px;
+    margin: 20px 30px 30px 30px;
 }
 
 .category-item{
-    /*display: inline;*/
+
+
+    display: flex;
+
     /*align-items: center;*/
-    /*justify-content: center;*/
-    /*margin: 6px 0;*/
-    /*background: #333;*/
-    /*margin-right: 3%;*/
-    /*color: #fff;*/
-    /*text-align: center;*/
-    /*border-radius: 50%;*/
-    /*width: 85px;*/
-    /*height: 85px;*/
-    /*text-decoration: none;*/
-    /*cursor: pointer;*/
-    /*box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
-/*       display: inline-flex;
-    align-items: center;
     justify-content: center;
-    margin: 6px 0;
+    align-items: center;
+    /*margin: 2vw 3% 2vw 10px;*/
     background: #e8e8e8;
-    margin-left: 10px;
-    margin-right: 3%;
     color: #083755;
-    text-align: center;
+    /*text-align: center;*/
     border-radius: 50%;
-    width: 85px;
-    height: 85px;
+    width: 100px;
+    height: 100px;
     text-decoration: none;
-    transition: 0.2s ease; */
-  
-    display: inline-block;
-    color: #333;
-    /*padding: 13px;*/
-    min-width: 7vw;
-    margin: 0 0.6vw 0 0.6vw;
-    /*margin: 0 1vw;*/
-    min-height: 7vw;
-    position: relative;
-    outline: none;
-    font-family: CoreSans, sans-serif;
-    text-decoration: none;
-    border-radius: 50%;
-    box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.2)
+    overflow: hidden;
+    transition: 0.2s ease;
 }
 
-.category-item-overlay{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-color: rgba(0,0,0,0.7);
-    z-index: 2;
-    /*text-align: center;*/
-    position: absolute;
-    top:0;
-    left:0;
-    display: flex;
-    opacity: 80%;
-    justify-content: center; /* align horizontal */
-    align-items: center; /* align vertical */
-    transition: opacity 0.4s;
-    /*word-break:break-all;*/
-}
+/*.category-item-overlay{*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    border-radius: 50%;*/
+/*    background-color: rgba(0,0,0,0.7);*/
+/*    z-index: 2;*/
+/*    !*text-align: center;*!*/
+/*    position: absolute;*/
+/*    top:0;*/
+/*    left:0;*/
+/*    display: flex;*/
+/*    opacity: 80%;*/
+/*    justify-content: center; !* align horizontal *!*/
+/*    align-items: center; !* align vertical *!*/
+/*    transition: opacity 0.4s;*/
+/*    !*word-break:break-all;*!*/
+/*}*/
 
 .category-item p{
     font-family: CoreSans, sans-serif;
-    font-size: 1em;
+    font-size: 0.9em;
     z-index: 4;
-    color: white;
+    color: black;
     opacity: 100%;
     font-weight: 400;
+    /*margin: 1vw;*/
     /*width: 75%;*/
     /*height: 75%;*/
+    /*top: 50%;*/
+    /*-ms-transform: translateY(-50%);*/
+    /*transform: translateY(-50%);*/
     max-width: 80%;
-    max-height: 75%;
-    /*border: 1px solid fuchsia;*/
-    justify-content: center; /* align horizontal */
-    align-items: center; /* align vertical */
-    white-space: normal;
+    max-height: 70%;
+    /*justify-content: center; !* align horizontal *!*/
+    /*align-items: center; !* align vertical *!*/
+    /*white-space: normal;*/
     /*overflow: visible;*/
-    word-break: break-all;
-    overflow-wrap: break-word;
+    /*word-break: break-word;*/
+    overflow-wrap: break-spaces;
+    overflow: hidden;
 }
 
-
-.category-item-overlay:hover{
-    opacity: 100%;
-}
-
-.category-item img{
-    border-radius: 50%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: 1;
-    position: absolute;
-    top:0;
-    left:0;
-/* }
 
 .category-item:hover{
     background:#c5c5c5;
@@ -167,6 +144,7 @@ a {
 .category-item:active{
     background: rgb(223, 223, 223);
 }
+
 
 .category-item h5{
     font-size: 16px;
